[gd_scene load_steps=7 format=3 uid="uid://dngwm8d1e2g8x"]

[ext_resource type="Script" uid="uid://cy3bdb2cg2vcw" path="res://scripts/UI/xp_display_ui.gd" id="1_d6e6u"]
[ext_resource type="Texture2D" uid="uid://b34faolw7y70p" path="res://sprites/ui/pixel-star.png" id="1_v8n5n"]
[ext_resource type="Script" uid="uid://b60wal08mkygh" path="res://scripts/UI/Bar.gd" id="2_kkgtk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lhlip"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_om6yq"]
bg_color = Color(0.154876, 0.154876, 0.154876, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gxk5v"]
bg_color = Color(0, 0.346989, 0.667401, 1)

[node name="XPDisplay" type="Panel"]
custom_minimum_size = Vector2(0, 50)
theme_override_styles/panel = SubResource("StyleBoxEmpty_lhlip")
script = ExtResource("1_d6e6u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("1_v8n5n")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -22.0
offset_right = 22.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "XP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XPBar" type="Panel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_om6yq")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/XPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="bar_xp" type="Panel" parent="MarginContainer/HBoxContainer/XPBar/MarginContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_gxk5v")
script = ExtResource("2_kkgtk")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/XPBar/MarginContainer/bar_xp"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 5.0
offset_right = 40.0
grow_vertical = 2

[node name="currentHP" type="Label" parent="MarginContainer/HBoxContainer/XPBar/MarginContainer/bar_xp/HBoxContainer"]
layout_mode = 2
text = "5"

[node name="slash" type="Label" parent="MarginContainer/HBoxContainer/XPBar/MarginContainer/bar_xp/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="maxHP" type="Label" parent="MarginContainer/HBoxContainer/XPBar/MarginContainer/bar_xp/HBoxContainer"]
layout_mode = 2
text = "5"
